feat: add assetlinks.json

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="assetlinks.json file" href="/.well-known/assetlinks.json" />
+    <link rel="apple-app-site-association file" href="/.well-known/apple-app-site-association" />
     <title>Vite + React + TS</title>
   </head>
   <body>
+
     <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
